fixed width on small screen

--- a/src/styles/block/menu.scss
+++ b/src/styles/block/menu.scss
@@ -1,12 +1,10 @@
 .menu {
   z-index: 1;
   background-color: $color_gray;
-
-  &__content {
-    box-sizing: border-box;
-    padding: $header_Top_padding 0;
-    height: 100vh;
-  }
+  box-sizing: border-box;
+  padding: $header_Top_padding 0;
+  height: 100vh;
+  overflow-y: auto;
 
   &__top {
     @include top-actions;
